--- a/index.html
+++ b/index.html
@@ -33,8 +33,14 @@
 	</section>
 
 	<!-- FORM -->
-	<!--Add new task form here -->
-
+	<section id="newTaskForm">
+		<h3 class="todo-form-title">New To Do </h3>
+		<div class="form-input-container">
+			<img id="cancel" src="./img/icons/cross.png" alt="close form icon">
+			<input id="newItemInput" class="todo-title-input form-input" type="text" placeholder="To-Do Title">
+			<button id="saveNewItem" class="complete-todo-button">Add To Do</button>
+		</div>
+	</section>
 	<!-- FOOTER -->
 	<footer class="todo-footer">
 		<img id="add-todo" class="add-todo-button show-add-todo" src="./img/icons/add-button.png" alt="add new todo">
@@ -43,7 +49,7 @@
 
 	<!--jQuery-->
 	<script src="http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
-	<!--INclude your script file here -->
+	<script src="./app/scripts/scripts.js"></script>
 </main>
 </body>
 </html>
