--- a/index.html
+++ b/index.html
@@ -29,18 +29,30 @@
 			<h3>New To Dos</h3>
 		</div>
 
-		<!--Add progress-box from the reademe-->
+<!-- PROGRESS BOX -->
+<div class="progress-box">
+<h3>In Progress</h3>
+<ul class="list-group" id="currentList"></ul>
+</div>
+<div>
+</div>
+
+<div class="progress-box">
+<h3>Complete</h3>
+<ul class="list-group" id="archivedList"></ul>
+</div>
 	</section>
 
 	<!-- FORM -->
 	<section id="newTaskForm">
-		<h3 class="todo-form-title">New To Do </h3>
-		<div class="form-input-container">
-			<img id="cancel" src="./img/icons/cross.png" alt="close form icon">
-			<input id="newItemInput" class="todo-title-input form-input" type="text" placeholder="To-Do Title">
-			<button id="saveNewItem" class="complete-todo-button">Add To Do</button>
-		</div>
-	</section>
+    <h3 class="todo-form-title">New To Do </h3>
+    <div  class="form-input-container">
+        <img id="cancel" src="./img/icons/cross.png" alt="close form icon">
+        <input id="newItemInput" class="todo-title-input form-input" type="text" placeholder="To-Do Title">
+        <button  id="saveNewItem" class="complete-todo-button">Add To Do</button>
+    </div>
+</section>
+
 	<!-- FOOTER -->
 	<footer class="todo-footer">
 		<img id="add-todo" class="add-todo-button show-add-todo" src="./img/icons/add-button.png" alt="add new todo">
